<resources>
    <string name="app_name">Newcomer\'s</string>
    <string name="home">Home</string>
    <string name="ride">Ride</string>
    <string name="acco">Accomo</string>
    <string name="profile1">Profile</string>

    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="property_type">Property Type</string>
    <string name="rent">Rent</string>
    <string name="available_from_date">Available From Date</string>
    <string name="of_bedrooms"># of Bedrooms</string>
    <string name="of_bathrooms"># of Bathrooms</string>
    <string name="amenities_included">Amenities Included</string>
    <string name="heater">Heater</string>
    <string name="wifi">WiFi</string>
    <string name="laundry">Laundry</string>
    <string name="microwave">Microwave</string>
    <string name="fridge">Fridge</string>
    <string name="oven">Oven</string>
    <string name="water">Water</string>
    <string name="electricity">Electricity</string>
    <string name="other_details">Other Details</string>
    <string name="contact_number">Contact Number</string>
    <string name="photos">Photos</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>

    <string-array name="property_types">
        <item>House</item>
        <item>Apartment</item>
        <item>Condo</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_filters">More Filters</string>
    <string name="title">Title</string>
    <string name="filters">Filters</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="registration">Registration</string>
    <string name="e_mail">E-Mail:</string>
    <string name="user_name">User Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="log_in">Log-In</string>
    <string name="profile">Profile</string>
    <string name="_address">Address:</string>
    <string name="street_address">Street Address:</string>
    <string name="save_changes">Save Changes</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="sign_in">Sign In</string>
    <string name="post_accommodation">Post Accommodation</string>
    <string name="empty_accommodations_msg">Sorry! No accommodations available as of now!</string>
    <string name="reset_filters">Reset filters</string>
    <string name="don_t_have_an_account">Don\'t have an Account? Sign-Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="post">Post</string>
    <string name="ride_details">Ride Details</string>
    <string name="accommodations">Accommodations</string>
    <string name="accommodation_details">Accommodation Details</string>
    <string name="rides">Rides</string>
    <string name="post_ride">Post Ride</string>
    <string name="user_email">User Email</string>
    <string name="log_out">Log Out</string>
    <string name="action_info">Info\n</string>
    <string name="about_us_title">About Us</string>
    <string name="about_us_description"> <b>Welcome to our app!</b> We are dedicated to \n
                                        providing you with the best experience \n
                                        and features to help you connect and \n
                                        communicate with others. Our goal is to \n
                                        make your interactions seamless and enjoyable.\n \n
        <b>Made by:\nRiddhiben Makwana\nJaydip Kalkani\nMang Wang\nDipali Shaini</b></string>
    <string name="from">From</string>
    <string name="destination">Destination</string>
    <string name="car_model">Car Model</string>
    <string name="car_color">Car Color</string>
    <string name="licence_plate">Licence Plate</string>
    <string name="seats_remain">Seats Remain</string>
    <string name="description">Description</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="order_date_is_required">Order Date is required</string>
    <string name="orders">Orders</string>
    <string name="my_order_list">My Order List</string>

</resources>