<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccommodationFiltersModal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/filters"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:icon="@drawable/baseline_close_24" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:divider="@drawable/gap"
        android:orientation="vertical"
        android:padding="12dp"
        android:showDividers="middle">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/available_from_date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBedrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/of_bedrooms"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBathrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/of_bathrooms"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent" />

            <com.google.android.material.slider.RangeSlider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stepSize="10"
                android:valueFrom="200"
                android:valueTo="5000"
                app:values="@array/initial_rent_range" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApplyFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_filters" />

    </LinearLayout>


</LinearLayout>